--- a/_posts/2023-11-04-지역별인구파악.md
+++ b/_posts/2023-11-04-지역별인구파악.md
@@ -1961,94 +1961,237 @@ filter_df.sort_values(by="비율차이", ascending=True).head()
 
 
 
+## 시군구, 동 데이터를 가져온다.
+
 
 ```python
 #https://velog.io/@sooyeon/folium-Circle-Point-map-GeoJson-%ED%96%89%EC%A0%95%EA%B5%AC%EC%97%AD-%EA%B2%BD%EA%B3%84-%EA%B7%B8%EB%A6%AC%EA%B8%B0
-
-
 import geopandas as gpd
-EMD = gpd.read_file('data_file/emd_20230729/emd.shp', encoding='cp949')
-EMD.head()
-
-"""
-# 용인시의 행정구역 코드는 4146
-yi = EMD[EMD['EMD_CD'].str.startswith('4146')]
-yi.head()
-
-# WGS 84의 좌표계로 변환하여 위도경도 데이터를 생성
-yi4326 = yi.to_crs(epsg=4326)
-yi4326 = yi4326.sort_values('EMD_NM')
-display(yi4326.head(),yi4326.shape)
-"""
+from shapely.geometry import shape
+#시군구
+sigungu = gpd.read_file('data_file/sig_20230729/sig.shp', encoding='cp949')
+#읍명동
+dong = gpd.read_file('data_file/emd_20230729/emd.shp', encoding='cp949')
 ```
 
 
+```python
+#검색한다..
+def check_dong_name(dong_name):
+    d = dong[dong["EMD_KOR_NM"] == dong_name]
+    print(d)
+    return d
+
+#검색한다..
+def check_dong_cd(dong_cd):
+    d = dong[dong["EMD_CD"] == dong_cd]
+    print(d)
+    return d
+
+#그림을 그려준다.
+def draw_map(df):
+    ax = df.plot()
+    plt.show()   
+    
+    
+def check_size(df):
+    area = df['geometry'].apply(lambda x: shape(x).area).values[0]
+    a = df["EMD_KOR_NM"] + f" 면적: + {area/1000000} km2"
+    return a
 
 
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
+    
 
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
+#draw_map(check_dong_name("신동"))
 
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>EMD_CD</th>
-      <th>EMD_ENG_NM</th>
-      <th>EMD_KOR_NM</th>
-      <th>geometry</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>11110101</td>
-      <td>Cheongun-dong</td>
-      <td>청운동</td>
-      <td>POLYGON ((953700.022 1954605.065, 953693.871 1...</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>11110102</td>
-      <td>Singyo-dong</td>
-      <td>신교동</td>
-      <td>POLYGON ((953233.465 1953996.984, 953235.183 1...</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>11110103</td>
-      <td>Gungjeong-dong</td>
-      <td>궁정동</td>
-      <td>POLYGON ((953560.228 1954257.466, 953561.190 1...</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>11110104</td>
-      <td>Hyoja-dong</td>
-      <td>효자동</td>
-      <td>POLYGON ((953519.843 1953890.785, 953518.489 1...</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>11110105</td>
-      <td>Changseong-dong</td>
-      <td>창성동</td>
-      <td>POLYGON ((953516.123 1953734.362, 953516.526 1...</td>
-    </tr>
-  </tbody>
-</table>
-</div>
+#목동
+draw_map(check_dong_cd("41590134"))
+#신동
+draw_map(check_dong_cd("41590133"))
 
+check_size(check_dong_cd("41590134"))
+
+        
+```
+
+            EMD_CD EMD_ENG_NM EMD_KOR_NM  \
+    2123  41590134   Mok-dong         목동   
+    
+                                                   geometry  
+    2123  POLYGON ((967296.524 1910830.035, 967296.415 1...  
+    
+
+
+    
+![png](output_32_1.png)
+    
+
+
+            EMD_CD EMD_ENG_NM EMD_KOR_NM  \
+    2122  41590133   Sin-dong         신동   
+    
+                                                   geometry  
+    2122  POLYGON ((969142.006 1911124.678, 969144.349 1...  
+    
+
+
+    
+![png](output_32_3.png)
+    
+
+
+            EMD_CD EMD_ENG_NM EMD_KOR_NM  \
+    2123  41590134   Mok-dong         목동   
+    
+                                                   geometry  
+    2123  POLYGON ((967296.524 1910830.035, 967296.415 1...  
+    
+
+
+
+
+    2123    목동 면적: + 1.9354411709655794 km2
+    Name: EMD_KOR_NM, dtype: object
+
+
+
+
+```python
+
+#리
+#li = gpd.read_file('data_file/li_20230729/li.shp', encoding='cp949')
+si = sigungu[sigungu["SIG_KOR_NM"] == "화성시"]
+hwasung = dong[dong["EMD_CD"] == "41590134"]
+
+#print(sigungu.head)
+
+
+#d = emd["EMD_KOR_NM"]
+#d.to_csv("11.csv", encoding='cp949')
+
+
+
+ax = si.plot()
+check_dong_cd("41590134").boundary.plot(ax=ax, color='red', linewidth=2)
+check_dong_cd("41590133").boundary.plot(ax=ax, color='red', linewidth=2)
+
+
+plt.title("경기도 화성시의 동탄 9동")
+
+area = hwasung['geometry'].apply(lambda x: shape(x).area).values[0]
+print(f"목동 면적: {area/1000000} km2")
+
+"""
+
+
+
+ax = si.plot(figsize=(11, 11), color="w", edgecolor="k")
+ax.set_title("경기도 화성시 기초구역도")
+ax.set_axis_off()
+plt.show()
+
+
+
+
+
+print(hwasung["geometry"])
+"""
+```
+
+            EMD_CD EMD_ENG_NM EMD_KOR_NM  \
+    2123  41590134   Mok-dong         목동   
+    
+                                                   geometry  
+    2123  POLYGON ((967296.524 1910830.035, 967296.415 1...  
+            EMD_CD EMD_ENG_NM EMD_KOR_NM  \
+    2122  41590133   Sin-dong         신동   
+    
+                                                   geometry  
+    2122  POLYGON ((969142.006 1911124.678, 969144.349 1...  
+    
+
+
+
+
+    '\n\n\n\nax = si.plot(figsize=(11, 11), color="w", edgecolor="k")\nax.set_title("경기도 화성시 기초구역도")\nax.set_axis_off()\nplt.show()\n\n\n\n\n\nprint(hwasung["geometry"])\n'
+
+
+
+
+    
+![png](output_33_2.png)
+    
+
+
+## 연습중
+
+
+```python
+#https://datascienceschool.net/03%20machine%20learning/03.04.01%20%EC%A7%80%EB%A6%AC%20%EC%A0%95%EB%B3%B4%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%B2%98%EB%A6%AC.html
+
+import matplotlib.pyplot as plt
+import matplotlib.font_manager as fm
+import geopandas as gpd
+
+
+
+
+countries = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))
+cities = gpd.read_file(gpd.datasets.get_path('naturalearth_cities'))
+
+countries.tail(3)
+cities.tail()
+
+
+# 나눔글꼴 경로 설정
+font_path = 'C:/Windows/Fonts/Hancom Gothic Bold.ttf'
+# 폰트 이름 가져오기
+font_name = fm.FontProperties(fname=font_path).get_name()
+# 폰트 설정
+plt.rc('font', family=font_name)
+ax = countries.plot(column="continent", legend=True, categorical=True)
+ax.set_title("세계 지도")
+ax.set_axis_off()
+plt.show()
+```
+
+    C:\Users\kimjaehee\AppData\Local\Temp\ipykernel_16240\3767331158.py:8: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.
+      countries = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))
+    C:\Users\kimjaehee\AppData\Local\Temp\ipykernel_16240\3767331158.py:9: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_cities' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.
+      cities = gpd.read_file(gpd.datasets.get_path('naturalearth_cities'))
+    C:\Users\kimjaehee\anaconda3\lib\site-packages\geopandas\plotting.py:967: UserWarning: Glyph 8722 (\N{MINUS SIGN}) missing from current font.
+      plt.draw()
+    
+
+
+    
+![png](output_35_1.png)
+    
+
+
+
+```python
+from shapely.geometry import Point, Polygon, LineString
+
+northern_asia = countries.loc[countries['name'].isin(['Korea', 'China', 'Japan'])]
+base = northern_asia.plot(figsize=(15, 15), color="w", edgecolor="m")
+
+seoul = cities.loc[cities.name == "Seoul", "geometry"].squeeze()
+beijing = cities.loc[cities.name == "Beijing", "geometry"].squeeze()
+tokyo = cities.loc[cities.name == "Tokyo", "geometry"].squeeze()
+
+line = LineString([beijing, seoul, tokyo])
+
+ax = gpd.GeoSeries([seoul, beijing, tokyo, line]).plot(ax=base, color="k", edgecolor='k', lw=1)
+ax.set_title("동북아시아 지도")
+ax.set_axis_off()
+plt.show()
+```
+
+
+    
+![png](output_36_0.png)
+    
 
 
 
