--- a/_posts/2023-11-05-판다스 자주 쓰는 것들.md
+++ b/_posts/2023-11-05-판다스 자주 쓰는 것들.md
@@ -545,55 +545,61 @@ plt.show()
     
 
 
-
-```python
-
-```
+## 기존 데이터 프레임에 컬럼 붙이기
 
 
 ```python
+import pandas as pd
 
+# 데이터프레임 생성
+data = {'funcname': ['aa', 'bb', 'cc', 'dd', 'ee'],
+        'count': [1, 2, 3, 4, 55]}
+
+df = pd.DataFrame(data)
+
+for index, row in df.iterrows():
+    # 각 행에 대한 계산 로직을 여기에 추가
+    print(row)
+    df.at[index, "total"] = "11"
+
+# 결과 출력
+print(df, df.shape)
+
+
+total_values = [1, 2, 3, 4, 5]
+df['total'] = total_values
+
+print(df, df.shape)
 ```
 
-
-```python
-
-```
-
-
-```python
-
-```
-
-
-```python
-
-```
-
-
-```python
-
-```
-
-
-```python
-
-```
-
-
-```python
-
-```
-
-
-```python
-
-```
-
-
-```python
-
-```
+    funcname    aa
+    count        1
+    Name: 0, dtype: object
+    funcname    bb
+    count        2
+    Name: 1, dtype: object
+    funcname    cc
+    count        3
+    Name: 2, dtype: object
+    funcname    dd
+    count        4
+    Name: 3, dtype: object
+    funcname    ee
+    count       55
+    Name: 4, dtype: object
+      funcname  count total
+    0       aa      1    11
+    1       bb      2    11
+    2       cc      3    11
+    3       dd      4    11
+    4       ee     55    11 (5, 3)
+      funcname  count  total
+    0       aa      1      1
+    1       bb      2      2
+    2       cc      3      3
+    3       dd      4      4
+    4       ee     55      5 (5, 3)
+    
 
 
 ```python
